<resources>
    <string name="app_name">My Application</string>

    <string name="image_main">imageMain</string>
    <string name="play">PLAY</string>
    <string name="next">NEXT</string>
    <string name="confirm">Confirm</string>
    <string name="read_more">READ MORE</string>
    <string name="desc">What is Lorem Ipsum? Loren Ipsum is simply dummy text of printing and typesetting industry</string>
    <string name="title">CANDY\nBUST</string>
    <string name="download">DOWNLOAD\n30 MB</string>
    <string name="downloaded">20 MB / 30 MB</string>

</resources>
