<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondActivity">

        <View
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape_corner_20"
            android:transitionName="@string/image_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/tv_read_more"
            android:textColor="@color/colorGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="16dp"
            android:text="@string/read_more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

        <View
            android:id="@+id/view_left"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorGrey"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/bottomLayout"
            app:layout_constraintEnd_toStartOf="@+id/view_right"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_read_more" />


        <View
            android:id="@+id/view_right"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:background="@color/colorGrey"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/view_left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view_left"
            app:layout_constraintTop_toTopOf="@+id/view_left" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/oswald_bold"
            android:text="@string/title"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <View
            android:id="@+id/view_close"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_close_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <FrameLayout
            android:id="@+id/view_play"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_corner_blue_30"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:fontFamily="@font/oswald_regular"
                android:text="@string/play"
                android:textColor="@color/colorWhite" />

        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/ProgressBarPrimary"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:progress="100"
                android:transitionName="@string/image_main"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view_bottom_corner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_bottom_corner"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/shape_round_25"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/progressBar"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_bottom_corner_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_close_black_24dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/progressBar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald_regular"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/download"
                android:textColor="@color/colorWhite"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/progressBar"
                app:layout_constraintEnd_toEndOf="@+id/progressBar"
                app:layout_constraintStart_toStartOf="@+id/progressBar"
                app:layout_constraintTop_toTopOf="@+id/progressBar" />

            <TextView
                android:id="@+id/tv_downloaded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="@font/oswald_regular"
                android:gravity="center"
                android:text="@string/downloaded"
                android:textColor="@color/colorWhite"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/progressBar"
                app:layout_constraintEnd_toEndOf="@+id/progressBar"
                app:layout_constraintStart_toStartOf="@+id/progressBar"
                app:layout_constraintTop_toTopOf="@+id/progressBar" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
